add Weatherbit+autofac+member page

--- a/NexMed.Data/NexMed.Data.csproj
+++ b/NexMed.Data/NexMed.Data.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\201811241038354_Initial.Designer.cs">
       <DependentUpon>201811241038354_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201811241214206_Initial1.cs" />
+    <Compile Include="Migrations\201811241214206_Initial1.Designer.cs">
+      <DependentUpon>201811241214206_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NexMedContext .cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,6 +91,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201811241038354_Initial.resx">
       <DependentUpon>201811241038354_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201811241214206_Initial1.resx">
+      <DependentUpon>201811241214206_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
