--- a/NexMed.WeatherServices/NexMed.WeatherServices.csproj
+++ b/NexMed.WeatherServices/NexMed.WeatherServices.csproj
@@ -50,9 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DarkskyService.cs" />
+    <Compile Include="IWeatherService.cs" />
+    <Compile Include="Models\DarkskyModel.cs" />
     <Compile Include="Models\WeatherbitModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Weatherbit.cs" />
+    <Compile Include="WeatherService.cs" />
+    <Compile Include="WeatherbitService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NexMed.Data\NexMed.Data.csproj">
