--- a/NexMed.WeatherWindowsService/packages.config
+++ b/NexMed.WeatherWindowsService/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="Autofac" version="4.8.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="EntityFramework6.Npgsql" version="3.2.0" targetFramework="net461" />
+  <package id="Npgsql" version="4.0.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
